Atualização de Usuários e Troca de Senha

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ j2ee.server.instance=tomcat70:home=C:\\xampp\\tomcat
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\a1620037\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\gu_ri\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
