--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\gu_ri\\AppData\\Roaming\\NetBeans\\8.1\\tomcat70.properties
+deploy.ant.properties.file=/Users/bruno/Library/Application Support/NetBeans/8.2/tomcat80.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=/Applications/NetBeans/glassfish-4.1.1/glassfish/domains/domain1
-j2ee.server.home=C:/xampp/tomcat
-j2ee.server.instance=tomcat70:home=C:\\xampp\\tomcat
+j2ee.server.home=/Users/bruno/Applications/apache-tomcat-8.5.34
+j2ee.server.instance=tomcat80:home=/Users/bruno/Applications/apache-tomcat-8.5.34
 j2ee.server.middleware=/Applications/NetBeans/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\gu_ri\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/Users/bruno/Library/Application Support/NetBeans/8.2/build.properties
